--- a/pipeline/pom.xml
+++ b/pipeline/pom.xml
@@ -9,6 +9,12 @@
   </properties>
   <dependencies>
     <dependency>
+        <groupId>org.owasp</groupId>
+        <artifactId>dependency-check-maven</artifactId>
+        <version>4.0.2</version>
+        <type>maven-plugin</type>
+    </dependency>
+    <dependency>
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
       <version>2.2.4</version>
@@ -21,7 +27,7 @@
     <dependency>
       <groupId>org.scala-lang</groupId>
       <artifactId>scala-library</artifactId>
-      <version>2.11.11</version>
+      <version>2.11.12</version>
       <scope>provided</scope>
       <!--scope>system</scope>
             <systemPath>/usr/lib/spark/jars/scala-library-2.11.8.jar</systemPath-->
@@ -29,13 +35,13 @@
     <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-sql_2.11</artifactId>
-      <version>2.2.0</version>
+      <version>2.3.2</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-core_2.11</artifactId>
-      <version>2.1.1</version>
+      <version>2.3.2</version>
       <scope>provided</scope>
       <!--scope>system</scope>
             <systemPath>/usr/lib/spark/jars/spark-core_2.11-2.2.0.jar</systemPath-->
@@ -43,7 +49,7 @@
     <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-streaming_2.11</artifactId>
-      <version>2.1.1</version>
+      <version>2.3.2</version>
       <scope>provided</scope>
       <!--scope>system</scope>
             <systemPath>/usr/lib/spark/jars/spark-streaming_2.11-2.2.0.jar</systemPath-->
@@ -51,7 +57,7 @@
     <dependency>
       <groupId>org.apache.hadoop</groupId>
       <artifactId>hadoop-common</artifactId>
-      <version>2.8.2</version>
+      <version>2.9.2</version>
       <scope>provided</scope>
       <!--scope>system</scope>
             <systemPath>/usr/lib/hadoop/hadoop-common-2.8.2.jar</systemPath-->
@@ -65,7 +71,7 @@
     <dependency>
       <groupId>com.google.cloud</groupId>
       <artifactId>google-cloud-storage</artifactId>
-      <version>1.12.0</version>
+      <version>1.65.0</version>
     </dependency>
     <dependency>
       <groupId>com.google.apis</groupId>
